syntax = "proto3";
package persistence;

option java_multiple_files = false;
option java_package = "no.elg.infiniteBootleg.protobuf";
option java_outer_classname = "ProtoWorld";

message Vector2f {
  float x = 1;
  float y = 2;
}

message Vector2i {
  sint32 x = 1;
  sint32 y = 2;
}

message World {

  int64 seed = 1;
  string name = 2;
  float time = 3;
  Vector2i spawn = 4;
  float timeScale = 5;

  Generator generator = 16;
  optional Entity player = 17;

  enum Generator {
    PERLIN = 0;
    FLAT = 1;
    EMPTY = 2;
  }
}

message Block {
  int32 material_ordinal = 1; //ordinal from Material enum

  optional TNT tnt = 16; //TntBlock, only applicable if material is TNT

  message TNT {
    int64 ticks_left = 1;
  }
}

message Chunk {
  Vector2i position = 1;
  repeated Block blocks = 2;
  repeated Entity entities = 3;
}

message Entity {
  EntityType type = 1;
  Vector2f position = 2;
  Vector2f velocity = 3;
  string uuid = 4;
  bool flying = 5;

  enum EntityType {
    GENERIC_ENTITY = 0; // default
    FALLING_BLOCK = 1;
    BLOCK = 2;
    PLAYER = 3;
  }

  optional Living living = 16;
  optional Material material = 17;
  optional Player player = 18;
  optional Generic generic = 19;

  message Living {
    string name = 1;
    int32 health = 2;
    int32 max_health = 3;
  }

  message Material {
    int32 material_ordinal = 1; //ordinal from Material enum
  }

  message Player {
    float torch_angle_deg = 1;
    bool controlled = 2;
  }

  message Generic {
    Vector2i size = 1; //x = width, y = height
  }

}
